test/compile-fail/resolution/use/no-name-multi/top.rhdl
mod a {
    pub struct b {}
    pub trait d {}
}

use a::b;
use a::c;
use a::d;